# LightG

./: .gitmodules  CMakeLists.txt  README.md
air_engine/: CMakeLists.txt
air_engine/src/: main.cpp
air_engine/src/core/: application.cpp  application.h  compute_shader.cpp  compute_shader.h  core.h  ecs.h  input.cpp  input.h  keycodes.h  ogl.h  scene.h  shader.cpp  shader.h  timer.h  vao.cpp  vao.h
air_engine/src/core/utils/: gpu_storage.h  gpu_vector_storage.cpp  gpu_vector_storage.h  obj_data.cpp  obj_file.cpp  obj_file.h
air_engine/src/core/vk/: air_vulkan.h  vulkan_device.cpp  vulkan_device.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_swapchain.cpp  vulkan_swapchain.h  vulkan_window.cpp  vulkan_window.h
air_engine/src/debug/: debug_system.h
air_engine/src/debug/shaders/: line.shader
air_engine/src/physics/: bounding_box.h  collider_plane.cpp  collider_sprite.cpp  collision_checkers.cpp  line.cpp  loose_octree.h  physics_core.h  physics_system.h  quadnode.cpp  quadtree.cpp  quadtree.h  ray.h
air_engine/src/render/: camera_3d.cpp  camera_3d.h  projections.cpp  render.h  render_instances.cpp  render_instances.h  renderer.h  rendering_system.cpp  rendering_system.h  texture.h  texture_manager.cpp  texture_manager.h
air_engine/src/render/shaders/: default.shader
air_engine/src/rtx_render/: rtx_plane.cpp  rtx_render.h  rtx_render_system.h
air_engine/src/rtx_render/shaders/: rtx_compute.shader
air_engine/src/scenes/: scene1.h  scene2.h  scene3.h  scene_rtx_test.h
air_engine/src/scripting/: scripting_system.cpp  scripting_system.h
game/: CMakeLists.txt
game/src/: main.cpp
game/src/environment_system/: environment_solver.shader  environment_solver_v2.shader  environment_system.h  jacobi.shader
game/src/environment_system/shaders/: environment_solver_v2.shader  jacobi.shader
game/src/grass_system/: grass_system.h
game/src/grass_system/shaders/: grass.shader
game/src/imgui_system/: imgui_system.h
game/src/map_manager/: map_file.cpp  map_file.h  map_manager.h
game/src/scenes/: map_manager.h  scene_0.h  scene_test.h  scene_vulkan_test.h
src/: air_engine.h  main.cpp
src/core/: air_engine.h  application.cpp  application.h  compute_shader.cpp  compute_shader.h  core.h  ecs.h  input.cpp  input.h  keycodes.h  log.h  ogl.h  scene.h  shader.cpp  shader.h  vao.cpp  vao.h
src/debug/: debug.h  debug_system.h
src/physics/: bounding_box.h  collider_plane.cpp  collider_sphere.cpp  collider_sprite.cpp  collision_checkers.cpp  line.h  loose_octree.h  physics.h  physics_core.h  physics_system.h  quadtree.h  ray.h
src/render/: camera_3d.h  render.h  render_instances.h  render_system.h  renderer.h  rendering_system.h  texture.h  texture_manager.cpp  texture_manager.h  transform.h
src/render/shaders/: default.shader
src/rtx_render/: rtx_core.h  rtx_render.h  rtx_render_system.h  rtx_sphere.cpp  rtx_sprite.cpp
src/rtx_render/shaders/: rtx.shader  rtx_canvas.shader  rtx_compute.shader
src/scenes/: scene1.h  scene2.h  scene3.h  scene_rtx_test.h
src/scripting/: scripting.h  scripting_system.h
